--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,6 +3,8 @@
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  position: fixed;
+  z-index: 1000;
 }
 
 .legal-header h1 {
@@ -13,8 +15,7 @@
 /* 
 working on this area */
 .main {
-  position: sticky;
-  top: 80px;
+  margin-top: 140px;
 }
 
 section {
@@ -29,10 +30,12 @@ section {
 }
 
 .section-label {
+  position: sticky;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
   padding: 10px 16px;
+  top: 160px;
 }
 
 .document-content {
@@ -40,6 +43,7 @@ section {
   flex-direction: column;
   gap: 30px;
   max-width: 600px;
+  top: 160px;
 }
 
 .document-content p {
@@ -62,6 +66,9 @@ footer {
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
 }
 
 .footer-content {
